--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1400,13 +1400,13 @@
 "wikitext-upload-save-terms-name" = "Terms of Use";
 "year-in-review-base-donate-subtitle" = "With your help, the Wikimedia Foundation—the nonprofit behind Wikipedia—will continue to ensure that the information you rely on is ad-free and trustworthy, while keeping Wikipedia running smoothly with cutting-edge tools and technologies. Please consider making a donation today. [Learn more about our work]($1).";
 "year-in-review-base-donate-title" = "0 ads served on Wikipedia";
-"year-in-review-base-editors-subtitle" = "Wikipedia's community of volunteer editors made more than $1 edits on the iOS app so far this year. The heart and soul of Wikipedia is our global community of volunteer contributors, donors, and billions of readers like yourself – all united to share unlimited access to reliable information.";
+"year-in-review-base-editors-subtitle" = "Volunteers made 81,987,181 changes across over 300 different language editions of Wikipedia. Over 31.2 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
 "year-in-review-base-editors-title" = "Editors on the iOS app made more than $1 edits";
 "year-in-review-base-edits-subtitle" = "This year, Wikipedia was edited at an average rate of $1 times per minute. Articles are collaboratively created and improved using reliable sources. All of us have knowledge to share, [learn how to participate]($2).";
 "year-in-review-base-edits-title" = "Wikipedia was edited $1 times per minute";
 "year-in-review-base-reading-subtitle" = "Wikipedia had more than $1 million articles across over $2 active languages this year. You joined millions in expanding knowledge and exploring diverse topics.";
 "year-in-review-base-reading-title" = "Wikipedia was available in more than 300 languages";
-"year-in-review-base-saved-subtitle" = "Active iOS App users had over $1 million reading lists this year. Adding articles to Reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
+"year-in-review-base-saved-subtitle" = "Active iOS App users had over 31.6 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
 "year-in-review-base-saved-title" = "We had over $1 Million reading lists";
 "year-in-review-base-viewed-subtitle" = "iOS app users have viewed Wikipedia articles $1 Billion times. For people around the world, Wikipedia is the first stop when answering a question, looking up information for school or work, or learning a new fact.";
 "year-in-review-base-viewed-title" = "We have viewed Wikipedia articles $1 Billion times";
@@ -1427,6 +1427,18 @@
 "year-in-review-day-wednesday" = "Wednesdays";
 "year-in-review-donate" = "Donate";
 "year-in-review-donate-now" = "Donate now";
+"year-in-review-english-edits-bytes-slide-subtitle" = "In 2024, volunteers added 3,416,899,197 bytes to English Wikipedia. The sum of their work together leads to a steadily improving, fact-based, and reliable knowledge resource that they give to the world. All of us have knowledge to share, [learn how to participate]($1).";
+"year-in-review-english-edits-bytes-slide-title" = "3.4 billion bytes added";
+"year-in-review-english-edits-slide-subtitle" = "Volunteers made 81,987,181 changes across over 300 different language editions of Wikipedia. Over 31.2 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
+"year-in-review-english-edits-slide-title" = "Editors made nearly 82 million changes this year";
+"year-in-review-english-explore-slide" = "Explore Wikipedia in Review";
+"year-in-review-english-explore-slide-subtitle" = "Wikipedia is the largest knowledge resource ever assembled in the history of the world, and it’s freely available to everyone everywhere. Look back on 2024 through the lens of Wikipedia.";
+"year-in-review-english-reading-slide-subtitle" = "People spent an estimated 2.4 billion hours—nearly 275,000 years!—reading English Wikipedia in 2024. Wikipedia is there when you want to learn about our changing world, win a bet among friends, or answer a curious child’s question.";
+"year-in-review-english-reading-slide-title" = "We spent 2.4 billion hours reading";
+"year-in-review-english-saved-reading-slide-subtitle" = "Active iOS App users had over 31.6 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
+"year-in-review-english-saved-reading-slide-title" = "We had over 31.6 million reading lists";
+"year-in-review-english-top-read-slide-subtitle" = "English Wikipedia’s most popular articles\n\nWhen people want to learn about our world—the good, bad, weird, and wild alike—they turn to Wikipedia. The top 5 visited articles on English Wikipedia were:\n\nDeaths in 2024\nKamala Harris\n2024 United States presidential election\nLyle and Erik Menendez\nDonald Trump\n\nRead more in [our dedicated blog post]($1).";
+"year-in-review-english-top-read-slide-title" = "English Wikipedia’s most popular articles";
 "year-in-review-feature-announcement-body" = "See insights about what articles we read and edited, and share highlights from our year on Wikipedia.";
 "year-in-review-feature-announcement-body-personalized" = "See insights about the articles you read on the Wikipedia app, share your journey, and discover highlights from your year.";
 "year-in-review-feature-announcement-title" = "Explore Wikipedia in Review";
@@ -1438,7 +1450,7 @@
 "year-in-review-login-title" = "Improve your Year in Review";
 "year-in-review-personalized-day-subtitle-format" = "You read the most articles on $1. It's clear that $1 are your prime day for exploring new content. Thanks for making the most of your reading time!";
 "year-in-review-personalized-day-title-format" = "You read most on $1.";
-"year-in-review-personalized-donate-subtitle" = "Thank you for investing in the future of free knowledge. In 2024, the Wikimedia Foundation advanced the technology to serve every reader and volunteer better, developed tools that empower collaboration, and supported Wikipedia in more languages. [Learn more about our work]($1).";
+"year-in-review-personalized-donate-subtitle" = "Thank you for investing in the future of free knowledge. This year, the Wikimedia Foundation improved the technology to serve every reader and volunteer better, developed tools that empower collaboration, and supported Wikipedia in more languages. [Learn more about our work]($1).";
 "year-in-review-personalized-donate-title" = "Your generosity helped keep Wikipedia thriving";
 "year-in-review-personalized-donation-thank-you" = "Wikimedia logo";
 "year-in-review-personalized-edit-views-subtitle-format" = "Readers around the world appreciate your contributions. In the last 2 months, articles you've edited have received $1 total views. Thanks to editors like you, Wikipedia is a steadily improving, fact-based, and reliable knowledge resource for to the world";
