--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1400,13 +1400,13 @@
 "wikitext-upload-save-terms-name" = "This message is used in the message [[Wikimedia:Wikipedia-ios-wikitext-upload-save-terms-and-license]].";
 "year-in-review-base-donate-subtitle" = "Year in review, donate slide subtitle when user has not made any donations that year. %1$1 is replaced with a MediaWiki url with more information about WMF. Do not alter markdown when translating.";
 "year-in-review-base-donate-title" = "Year in review, donate slide title when user has not made any donations that year.";
-"year-in-review-base-editors-subtitle" = "Year in review, collective edits count slide subtitle, $1 is replaced with the number of edits text, e.g. \"452,257\"";
+"year-in-review-base-editors-subtitle" = "Year in review, collective edits count slide subtitle.";
 "year-in-review-base-editors-title" = "Year in review, collective edits count slide title, $1 is replaced with the number of edits text, e.g. \"452,257\".";
 "year-in-review-base-edits-subtitle" = "Year in review, collective edits per minute slide subtitle, $1 is replaced with the number of edits per minute text, e.g. \"342\". $2 is replaced with a link to the Mediawiki Apps team FAQ about editing.";
 "year-in-review-base-edits-title" = "Year in review, collective edits per minute slide title, $1 is replaced with the number of edits per minute text, e.g. \"342\".";
 "year-in-review-base-reading-subtitle" = "Year in review, collective reading count slide subtitle. $1 is replaced with a formatted number of articles available across Wikipedia, e.g. \"63\". $2 is replaced with the number of active languages available on Wikipedia, e.g. \"300\"";
 "year-in-review-base-reading-title" = "Year in review, collective reading article count slide title, $1 is replaced with the number of languages available on Wikipedia, e.g. \"300\"";
-"year-in-review-base-saved-subtitle" = "Year in review, collective saved articles count slide subtitle, $1 is replaced with the number of saved articles text, e.g. \"31.6\".";
+"year-in-review-base-saved-subtitle" = "Year in review, collective saved articles count slide subtitle";
 "year-in-review-base-saved-title" = "Year in review, collective saved articles count slide title, $1 is replaced with the number of saved articles text, e.g. \"31.6\".";
 "year-in-review-base-viewed-subtitle" = "Year in review, collective article view count subtitle, $1 is replaced with the number of article views text, e.g. \"1.5\"";
 "year-in-review-base-viewed-title" = "Year in review, collective article view count slide title. $1 is replaced with the text representing the number of article views across Wikipedia, e.g. \"1.5\".";
@@ -1427,6 +1427,18 @@
 "year-in-review-day-wednesday" = "Localized name for Wednesday in plural form.";
 "year-in-review-donate" = "Year in review donate button";
 "year-in-review-donate-now" = "Year in review donate now button title. Displayed on top of Learn more in-app web view.";
+"year-in-review-english-edits-bytes-slide-subtitle" = "Edits bytes slide subtitle for English Year in Review, $1 is replaced by link to learn to participate.";
+"year-in-review-english-edits-bytes-slide-title" = "Edits bytes slide title for English Year in Review.";
+"year-in-review-english-edits-slide-subtitle" = "Edits slide subtitle for English Year in Review.";
+"year-in-review-english-edits-slide-title" = "Edits slide title for English Year in Review.";
+"year-in-review-english-explore-slide" = "Explore slide title for English Year in Review.";
+"year-in-review-english-explore-slide-subtitle" = "Explore slide subtitle for English Year in Review.";
+"year-in-review-english-reading-slide-subtitle" = "Reading slide subtitle for English Year in Review.";
+"year-in-review-english-reading-slide-title" = "Reading slide title for English Year in Review.";
+"year-in-review-english-saved-reading-slide-subtitle" = "Saved reading slide subtitle for English Year in Review.";
+"year-in-review-english-saved-reading-slide-title" = "Saved reading slide title for English Year in Review.";
+"year-in-review-english-top-read-slide-subtitle" = "Top read slide subtitle for English Year in Review with HTML list tags for the top 5 articles.";
+"year-in-review-english-top-read-slide-title" = "Top read slide title for English Year in Review.";
 "year-in-review-feature-announcement-body" = "Body for year in review feature announcement";
 "year-in-review-feature-announcement-body-personalized" = "Body for year in review feature announcement";
 "year-in-review-feature-announcement-title" = "Title for year in review feature announcement";
