--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -738,13 +738,13 @@
 "menu-cancel-accessibility-label" = "Cancel";
 "microsite-yir-english-edits-bytes-slide-subtitle" = "In 2024, volunteers added 4,104,852,969 bytes to English Wikipedia. The sum of all their work together leads to a steadily improving, fact-based, and reliable knowledge resource that they give to the world. All of us have knowledge to share, [learn how to participate]($1).";
 "microsite-yir-english-edits-bytes-slide-title" = "4 billion bytes added";
-"microsite-yir-english-edits-slide-subtitle" = "Volunteers made 98,222,407 changes across over 300 different language editions of Wikipedia. Over 38 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
+"microsite-yir-english-edits-slide-subtitle" = "Volunteers made 98,222,407 changes across over 300 different language editions of Wikipedia. Over 37 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
 "microsite-yir-english-edits-slide-title" = "Editors made nearly 98 million changes this year";
 "microsite-yir-english-non-donor-slide-subtitle" = "With your help, the Wikimedia Foundation—the nonprofit behind Wikipedia—will continue to ensure that the information you rely on is ad-free and trustworthy, while keeping Wikipedia running smoothly with cutting-edge tools and technologies. Please consider making a donation today. [Learn more about our work]($1).";
 "microsite-yir-english-non-donor-slide-title" = "0 ads served on Wikipedia";
 "microsite-yir-english-reading-slide-subtitle" = "People spent an estimated 2.9 billion hours—over 331,000 years!—reading English Wikipedia in 2024. Wikipedia is there when you want to learn about our changing world, win a bet among friends, or answer a curious child’s question.";
 "microsite-yir-english-reading-slide-title" = "We spent 2.9 billion hours reading";
-"microsite-yir-english-saved-reading-slide-subtitle" = "Active iOS App users had over 62.2 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
+"microsite-yir-english-saved-reading-slide-subtitle" = "Active iOS App users had over 62.2 million reading lists. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
 "microsite-yir-english-saved-reading-slide-title" = "We had over 62.2 million reading lists";
 "microsite-yir-english-top-read-slide-subtitle" = "The top 5 visited articles on English Wikipedia were:\n\n1. $1\n2. $2\n3. $3\n4. $4\n5. $5\nRead more in $6our dedicated blog post$7.";
 "microsite-yir-english-top-read-slide-title" = "English Wikipedia’s most popular articles";
@@ -1412,13 +1412,13 @@
 "wikitext-upload-save-terms-name" = "Terms of Use";
 "year-in-review-base-donate-subtitle" = "With your help, the Wikimedia Foundation—the nonprofit behind Wikipedia—will continue to ensure that the information you rely on is ad-free and trustworthy, while keeping Wikipedia running smoothly with cutting-edge tools and technologies. Please consider making a donation today. [Learn more about our work]($1).";
 "year-in-review-base-donate-title" = "0 ads served on Wikipedia";
-"year-in-review-base-editors-subtitle" = "Wikipedia's community of volunteer editors made more than 555,647 edits on the iOS app so far this year. The heart and soul of Wikipedia is our global community of volunteer contributors, donors, and billions of readers like yourself – all united to share unlimited access to reliable information.";
+"year-in-review-base-editors-subtitle" = "Wikipedia's community of volunteer editors made more than 555,647 edits on the iOS app. The heart and soul of Wikipedia is our global community of volunteer contributors, donors, and billions of readers like yourself – all united to share unlimited access to reliable information.";
 "year-in-review-base-editors-title" = "Editors on the iOS app made more than $1 edits";
-"year-in-review-base-edits-subtitle" = "This year, Wikipedia was edited at an average rate of $1 times per minute. Articles are collaboratively created and improved using reliable sources. All of us have knowledge to share, [learn how to participate]($2).";
+"year-in-review-base-edits-subtitle" = "Wikipedia was edited at an average rate of $1 times per minute. Articles are collaboratively created and improved using reliable sources. All of us have knowledge to share, [learn how to participate]($2).";
 "year-in-review-base-edits-title" = "Wikipedia was edited $1 times per minute";
-"year-in-review-base-reading-subtitle" = "Wikipedia had more than $1 million articles across over $2 active languages this year. You joined millions in expanding knowledge and exploring diverse topics.";
+"year-in-review-base-reading-subtitle" = "Wikipedia had more than $1 million articles across over $2 active languages. You joined millions in expanding knowledge and exploring diverse topics.";
 "year-in-review-base-reading-title" = "Wikipedia was available in more than 300 languages";
-"year-in-review-base-saved-subtitle" = "Active iOS App users had over 62.2 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
+"year-in-review-base-saved-subtitle" = "Active iOS App users had over 62.2 million reading lists. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
 "year-in-review-base-saved-title" = "We had over $1 Million reading lists";
 "year-in-review-base-viewed-subtitle" = "iOS app users have viewed Wikipedia articles $1 Billion times. For people around the world, Wikipedia is the first stop when answering a question, looking up information for school or work, or learning a new fact.";
 "year-in-review-base-viewed-title" = "We have viewed Wikipedia articles $1 Billion times";
@@ -1445,7 +1445,7 @@
 "year-in-review-feature-announcement-title" = "Explore Wikipedia in Review";
 "year-in-review-feature-announcement-title-personalized" = "Explore your Wikipedia Year in Review";
 "year-in-review-feature-explore-body" = "Wikipedia is the largest knowledge resource ever assembled in the history of the world, and it’s freely available to everyone everywhere. Here’s a review of 2024 through the lens of Wikipedia. ";
-"year-in-review-feature-explore-body-personalized" = "See insights about which articles you read on the Wikipedia app and the edits you made. Your reading history is kept protected. Reading insights are calculated using locally stored data on your device.";
+"year-in-review-feature-explore-body-personalized" = "See insights about which articles you read on the Wikipedia app and the edits you made in 2024. Your reading history is kept protected. Reading insights are calculated using locally stored data on your device.";
 "year-in-review-finish" = "Finish";
 "year-in-review-login-subtitle" = "Login or create an account to be eligible for more personalized insights";
 "year-in-review-login-title" = "Improve your Year in Review";
@@ -1461,8 +1461,8 @@
 "year-in-review-personalized-editing-title-format" = "You edited Wikipedia {{PLURAL:$1|$1 time|$1 times}}";
 "year-in-review-personalized-editing-title-format-500plus" = "You edited Wikipedia 500+ times";
 "year-in-review-personalized-explore" = "An animated illustration of a hand holding the Wikipedia globe, which gradually transforms into a small puzzle piece, symbolizing individual contributions to the platform.";
-"year-in-review-personalized-reading-subtitle-format" = "This year, you read {{PLURAL:$1|$1 article|$1 articles}}. Wikipedia had $2 million articles available across over $3 active languages. You joined millions in expanding knowledge and exploring diverse topics.";
-"year-in-review-personalized-reading-title-format" = "You read {{PLURAL:$1|$1 article|$1 articles}} this year";
+"year-in-review-personalized-reading-subtitle-format" = "You read {{PLURAL:$1|$1 article|$1 articles}}. Wikipedia had $2 million articles available across over $3 active languages. You joined millions in expanding knowledge and exploring diverse topics.";
+"year-in-review-personalized-reading-title-format" = "You read {{PLURAL:$1|$1 article|$1 articles}}";
 "year-in-review-personalized-saved-articles" = "Illustration of a puzzle piece wearing a hardhat with computer screens in the back.";
 "year-in-review-personalized-saved-subtitle-format" = "You saved {{PLURAL:$1|$1 article|$1 articles}} this year, including $2, $3 and $4. Each saved article reflects your interests and helps build a personalized knowledge base on Wikipedia.";
 "year-in-review-personalized-saved-title-format" = "You saved {{PLURAL:$1|$1 article|$1 articles}}";
